<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fractal Maps</string>
    <string name="main_title">Fractal Maps</string>
    <string name="continue_label">Continue</string>
    <string name="fractal_label">Fractal - single thread</string>
    <string name="bitmap_test_label">Fractal - dual threads</string>
    <string name="exit_label">Exit</string>
    <string name="settings_label">Settings...</string>
    <string name="settings_title">Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="mmaps_title">Fractal Maps</string>
    <string name="detail_title">Detail</string>
    <string name="intro_text">
<![CDATA[
	<h2>Welcome to <span style="font-style: italic;">Fractal Maps</span>!</h2>
	<p>This app is designed to showcase the relationship between the Mandelbrot set and Julia set fractals.
	<p>Move around the fractals with one finger and pinch to zoom. When you zoom, the fractal will re-render with more detail.
	<p>Tap and drag on the pin shown on the Mandelbrot fractal, to change the seed used for the associated Julia set, in real-time.
	<p>You can change the viewing configuration by long tapping on either fractal, or using the menu at the top-right. Bring a context menu up, and choose one of the options to make the fractal bigger, smaller, or toggle the viewing configuration between side-by-side and large-small.
	<p>Fractal Maps works in both portrait and landscape mode - rotate your device to try it out!
	<p><b>Fractal Maps</b> is open-source software, released under the GNU General Public License (v3). The source code can be
	found at <a href="https://github.com/voxelcarrot/FractalMaps">https://github.com/voxelcarrot/FractalMaps</a>.
	]]>
    </string>
    <string name="help_text">
<![CDATA[
	<h1>About fractals</h1>
	<p>A fractal is a \"self-similar\" shape, meaning that the same detailed pattern repeats over and over again as you zoom in. In the Mandelbrot
	set fractal, for example, those distinctive heart-shaped bulbs will keep appearing.
	<p>Fractals are generated by iterating a mathematical function on a set of points. Doing more iterations takes a longer time but produces
	more detailed shapes. More iterations have to be done when zooming in, to keep the same level of apparent detail. 
	<h1>About the Mandelbrot and Julia sets</h1>
	<p>Probably the most recognisable fractal of them all, the Mandelbrot set was discovered and popularised by mathematician Benoit Mandelbrot,
	who also invented the term \"fractal\" to describe the shapes he studied. It was one of the first fractals to be visualised on a computer,
	on March 1st, 1980, in IBM\'s Thomas J. Watson Research Centre. 
	<p>Julia sets are an older idea, first researched in the early 20th century by Gaston Julia. When a Julia set is defined using the same
	function that defines the Mandelbrot set, some very interesting behaviour appears. If the Julia set is parametirised by a point inside the
	Mandelbrot set, it will be connected. Moving out of the Mandelbrot set causes the Julia fractal to break apart into unconnected pieces.
	<p>The Mandelbrot and Julia sets also look similar in certain regions, particularly on the borders of the Mandelbrot. It is these relationships
	that <b>Fractal Maps</b> was developed to demonstrate.
	
	<h1>Controls</h1>
	<p>Drag with a single finger to move around the fractals. Any new areas will fill themselves in once you stop.
	<p>Use two fingers to zoom in and out. Again, the fractal will re-render once you stop.
	<p>Drag around the pin shown on the Mandelbrot set to change the seed used to render the Julia set. If you lose the pin, you can either long tap on the set to bring up the context menu, or use the application menu up top right.
	<p>From each fractal\'s context menu (long tap, or choose from the application menu) you can swap the position of the fractals, or view one larger with a preview of the other up top left. You can also rotate your device to use the app in both landscape and portrait.
	<h1>Other Menu Options</h1>
	<p>Under <b>Settings</b>, you can choose the colouring scheme for each fractal, the colour of the Julia pin, whether or not to do an initial
	crude rendering (a blockier first pass that gives a faster first impression but takes slightly longer overall), and whether or not to show
	the time for each render after it\'s complete.
	
	<h1>About Fractal Maps</h1>
	<p><b>Fractal Maps</b> is open-source software, released under the GNU General Public License (v3). The source code can be
	found at <a href="https://github.com/voxelcarrot/FractalMaps">https://github.com/voxelcarrot/FractalMaps</a>.
	]]>

    </string>

    <!-- <p>Tap <b>Detail level</b> to control the level of detail on each fractal. Higher detail means more iterations will be done when rendering,
    taking longer but giving a clearer picture.
    <p><b>Save/Share</b> lets you save an image of the current fractal into your Pictures folder or share it using email, Facebook, Twitter, etc.
    (if you have those apps installed). -->

    <string name="about_label">About</string>
    <string name="bitmap_label">Bitmap (not implemented)</string>
    <string name="side_by_side_label">Side-by-side fractals</string>
    <string name="menu_reset_all">Reset All</string>
    <string name="menu_little">Toggle Small</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_detail">Detail Level</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_switch_layout">Switch Layout</string>
    <string name="menu_swap_views">Swap Views</string>
    <string name="menu_switch_renderer">CPU/GPU</string>
    <string name="menu_reset_fractal">Reset Fractal</string>
    <string name="menu_place_pin">Place pin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="context_view_side_side">View side-by-side</string>
    <string name="context_make_big">Make fractal big</string>
    <string name="context_change_view_position">Move fractal %1$s</string>
    <string name="context_reset">Reset fractal</string>

    <string name="menu_benchmark_old">Benchmark Alasdair\'s Point</string>
    <string name="menu_benchmark_one">Benchmark Point One</string>
    <string name="menu_benchmark_two">Benchmark Point Two</string>
    <string name="menu_benchmark_three">Benchmark Point Three</string>
    <string name="menu_benchmark_four">Benchmark Point Four</string>
    <string name="menu_benchmark_five">Benchmark Point Five</string>
    <string name="menu_benchmark_six">Benchmark Point Six</string>
    <string name="menu_benchmark_seven">Benchmark Point Seven</string>

    <string name="menu_show_mandelbrot_menu">Mandelbrot Menu</string>
    <string name="menu_show_julia_menu">Julia Menu</string>

    <string name="toolbar_progress">Rendering...</string>

</resources>
