<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuResetFractal"
        android:enabled="true"
        android:visible="true"
        android:title="@string/menu_reset_fractal"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menuPlacePin"
        android:enabled="true"
        android:visible="false"
        android:title="@string/menu_place_pin"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menuChangeLayout"
        android:enabled="true"
        android:visible="true"
        android:title="@string/context_view_side_side"
        android:icon="@drawable/ic_action_view_as_grid"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menuSwapViews"
        android:enabled="true"
        android:visible="true"
        android:title="@string/menu_swap_views"
        android:icon="@drawable/ic_action_import_export"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menuSave"
        android:enabled="true"
        android:visible="true"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_action_sd_storage"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menuShare"
        android:enabled="true"
        android:visible="true"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="never"></item>
</menu>
